--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NovaIA</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Bienvenido a NovaIA</h1>
     <h2>Esta inteligencia artificial fue creada como un chatbot <br> interactivo,todavia esta en desarrollo,se encuentra en estado Alpha <br> y esta solo disponible para windows</h2>
     <button onclick=descargar()>Descargar</button>
-   <script src="src/script.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
